app/client/templates/single-app/single-app.scss
/* ... */
.description {
  position: relative;

  .text {

    overflow: hidden;
    font-size: 1.7rem;

    &.padded {
      padding-top: 2rem;
      padding-bottom: 2rem;
    }

    &.min-height {
      min-height: 28rem;
    }

    &.max-height {
      max-height: 28rem;
    }

    .fade-box {
      position: absolute;
      height: 5rem;
      bottom: 3.4rem;
      width: 100%;
      background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));

      &.hidden {
        display: none;
      }
    }

  }

  .read-more-bar {

    clear: both;
    text-align: center;

    .read-more {
      display: inline-block;
      padding: 0.5rem 1rem 0.5rem 1rem;
      margin-top: 0.5rem;
      border-top: 1px solid #cfb5d6;
      font-size: 1.9rem;
      color: #783189;
      cursor: pointer;

      i {
        color: #c9add0;
      }
    }

  }

}

#flag-box {

  position: absolute;
  right: $app-container-padding-rl;
  width: 19.5rem;
  background-color: #f2f2f2;
  box-shadow: $app-container-box-shadow;
  color: #783189;
  padding: 1.1rem;
  font-size: 1.3rem;
  border: 1px solid #e4dfe5;
  line-height: 1.8;

  &.hidden {
    display: none;
  }

  .divider {
    margin: 0;
    border-bottom: 1px solid #cfb5d6;
  }

  .button {
    float: right;
    background-color: #c9add0;
    color: #ffffff;
    height: 1.7rem;
    line-height: 1.7rem;
    font-size: 1.4rem;
    padding-left: 0.65rem;
    padding-right: 0.65rem;
    margin-left: 0.25rem;
    font-weight: normal;
    cursor: pointer;

    &:hover {
      background-color: #783189;
    }
  }

  input[type="radio"] {
      display:none;
  }
  input[type="radio"] + label {
    cursor: pointer;
    line-height: 2;
  }
  input[type="radio"] + label span {
    display: inline-block;
    vertical-align: middle;

  }
  input[type="radio"] + label span.vis-radio {
    width: 1.1rem;
    height: 1.1rem;
    border-radius: 0.55rem;
    background-color: #d7c5dd;
    margin-left: 0.25rem;
    margin-right: 0.5rem;
  }
  input[type="radio"]:checked + label span.vis-radio {
    background-color: #783189;
  }

  textarea, input[type="text"], div[contenteditable] {
    width: 100%;
    outline: none;
    resize: none;
    background-color: white;
    border: 1px solid #e4dfe5;
    color: #783189;
    font-family: $main-font;
    font-weight: 300;
    font-size: 1.3rem;
    margin-bottom: 0.8rem;
    padding: 0.2rem;
  }

  div[contenteditable] {
    min-height: 3.5rem;
  }

}

.carousel {

  clear: both;
  font-size: 0;
  margin-top: 2rem;
  margin-bottom: 5rem;
  text-align: justify;

  &:after {
    content: '';
    display: inline-block;
    height: 0;
    line-height: 0;
    font-size: 0;
    width: 100%;
  }

  .owl-carousel {

    display: inline-block;
    vertical-align: middle;
    background-color: #eeeeee;
    width: 90%;

    .screenshot-container {

      width: 100%;
      min-width: 22rem;
      box-sizing: border-box;
      display: inline-block;
      position: relative;

      .screenshot {

        position: absolute;
        top: 0.6rem;
        bottom: 0.6rem;
        right: 0.6rem;
        left: 0.6rem;
        background-position: center;
        background-size: cover;
        cursor: pointer;

      }

      &:before {
        display: block;
        content: "";
        width: 100%;
        padding-top: 56.25%;
      }

    }

  }

  @media (max-width: $small-tablet) {

    .prev-button, .next-button {
      display: none;
    }

    .owl-carousel {
      width: 100%;
    }
  }

}

.app-item-inner.reviews-section {

  padding-bottom: 4.6rem;

  .review-bar {

    .rating {
      display: inline-block;
      vertical-align: bottom;
    }

    .ratings-count {
      margin-left: 1rem;
    }

    .write-review {
      display: inline-block;
      vertical-align: bottom;
      line-height: 4rem;

      .my-rating-box {
        display: inline-block;
        position: relative;
      }
    }

    i.fa-caret-down, i.fa-caret-up {
      font-size: 1.5em;
      vertical-align: sub;
    }
  }

  .review-entry {
    width: 100%;
    outline: none;
    resize: none;
    background-color: white;
    border: 1px solid #e4dfe5;
    color: #6d627c;
    font-family: $main-font;
    font-weight: 300;
    font-size: 1.8rem;
    margin-bottom: 0.8rem;
    padding: 1.2rem;
    box-sizing: border-box;
  }

  .divider.margin-top {
    margin-top: 0.8rem;
  }

  .rating {

    .app-rating, span, i {

      font-size: 1.7rem;
      display: inline;
      line-height: 3.5rem;
      height: 3.5rem;
      color: $star-col-dark;

    }

    .app-rating.monochrome {
      .icon-star.light {
        color: #cccccc;
      }
      .icon-star.dark {
        color: #222222;
      }
    }
  }

  .sandstorm-button.neutral.submit {
    cursor: initial;
  }

  .review-frame {

    margin-top: 2.4rem;

  }

  .reviews {

    display: inline-block;
    vertical-align: middle;
    width: 94%;
    position: relative;
    box-sizing: border-box;

    .review-box {

      padding: 1.9rem;
      box-sizing: border-box;
      height: 15rem;
      overflow: hidden;

      @media (max-width: $small-tablet) {
        padding: 1.9rem 0;
      }

      .username {
        font-size: 1.8rem;
        color: #222222;
      }

      .rating {
        display: inline-block;
        vertical-align: middle;
        margin-right: 1.5rem;
      }

      .date {
        font-size: 1.5rem;
        display: inline-block;
        vertical-align: middle;
        color: #6d627c;
        line-height: 3.5rem;
      }

      .review {
        font-size: 1.5rem;
        font-style: italic;
        color: #6d627c;
      }

    }

  }

}

.prev-button, .next-button {

  width: 3%;
  text-align: center;
  display: inline-block;
  vertical-align: middle;
  color: #783189;
  font-weight: 300;
  cursor: pointer;

  &.disabled {

    cursor: initial;
    color: #c9add0;

  }

  i {
    font-size: 7rem;
  }

}

